:bug: fixes flexwrap for items

--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,10 @@ p {z-index: 2;}
     pointer-events: none;
 }
 
-
 .App-header {
-  background-image: radial-gradient(#4ea128, #3f9cf7, #12175a);
-  min-height: 30vh;
+  background-image: radial-gradient(  black, #12175a, #3f9cf7);
+  min-height: 20vh;
+  padding: 2px 10px 4px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,43 +33,52 @@ p {z-index: 2;}
   color: red;
 }
 
-.categorical-icon {
-  height: 48px;
-  width: 48px;
+.App-body {
+  padding: 2rem 0 2rem 0;
+  background-image: linear-gradient(to left, #4ea128, #3f9cf7, #4ea128);
+  width: 100vw;
 }
+
+.itemm-grid { flex-grow: 1; }
 
 ul {
   list-style: none;
   margin: 0;
-}
-
-section {
-  background-image: linear-gradient(to left, #4ea128, #3f9cf7, #4ea128);
-  padding: 2rem 0 2rem 0;
-}
-
-.flex-grid {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  flex-wrap: wrap;
+}
+.categorical {
+  margin: 0.4rem;
+  max-width: 24vw;
 }
 
 .itemm-card-back {
   background: wheat;
   padding: 3px 7px 7px 7px;
 }
-.itemm-border-1 { border: 2px sienna solid; border-radius: 3px ; }
-.itemm-border-2 { border: 3px chocolate solid; border-radius: 4px ; }
-.itemm-border-3 { border: 5px sandybrown solid; border-radius: 8px ; }
-.itemm-border-4 { border: 2px brown solid; border-radius: 8px ; }
-.itemm-border-5 {
-  border: 5px deepskyblue dotted; border-radius: 15px ;
-}
+.itemm-border-1 { border: 2px sienna solid; border-radius: 3px; }
+.itemm-border-2 { border: 3px chocolate solid; border-radius: 4px; }
+.itemm-border-3 { border: 5px sandybrown solid; border-radius: 8px; }
+.itemm-border-4 { border: 2px brown solid; border-radius: 8px; }
+
 
 .item-border {
   border: white solid 2px;
-  background: tan;
+  background-image: radial-gradient(wheat, tan);
   padding: 2px;
+  height: 48px;
+  width: 48px;
+}
+
+.rowed {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+.rowed * {
+  margin: 0.15em;
 }
 
 @keyframes pulse {
